--- a/style.css
+++ b/style.css
@@ -1,9 +1,67 @@
-table{
-    background-color: rgb(204, 186, 228);
-    border: 2px;
-    border-color: rgb(197, 102, 25);
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
-button{
-    width: 100px;
-    height: 20px;
+.container {
+    display: flex;
+    height: 100vh;
+}
+.sidebar {
+    width: 250px;
+    background: #4A79A5;
+    color: white;
+    padding: 15px;
+}
+.sidebar h2 {
+    font-style: italic;
+}
+.menu-item {
+    background: white;
+    color: black;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.submenu {
+    display: none;
+    padding-left: 15px;
+}
+.content {
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+}
+.tabs {
+    display: flex;
+    gap: 15px;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 10px;
+}
+.tab {
+    cursor: pointer;
+    font-weight: bold;
+    color: #4A79A5;
+}
+.tab-content {
+    display: none;
+    margin-top: 20px;
+}
+.active-tab {
+    display: block;
+}
+.add-button {
+    background: #4A79A5;
+    color: white;
+    padding: 5px 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 1px;
+    margin-left: 150px;
+    
 }
